# Flask_TMS_Homework

./: .gitignore  lesson18.py  models.py  pyproject.toml
static/: main.css  publish.css
templates/: home.html  note.html  publish_form.html
